# WM278-Assignment-1

./: .coverage  README.md  pyproject.toml  requirements.txt
instance/: wmgzon.sqlite
wm278assignment/: main.py  schema.sql
wmgzon/: __init__.py  admin_page.py  auth.py  basket.py  grocery.py  landingpage.py  schema.sql  tutorial.py
wmgzon/static/: style.css
wmgzon/templates/: base.html  search_results.html  view_data.html  view_data_grocery.html  view_data_stock.html
wmgzon/templates/admin/: add_grocery_information.html  add_product.html  adminbase.html  adminpage.html  update.html  view_all_tables.html  view_products_admin.html
wmgzon/templates/admin/view_data/: view_data_category.html  view_data_grocery.html  view_data_users.html
wmgzon/templates/landingpage/: Coming_soon_products.html  basket.html  grocery layout.html  grocery.html  grocery_gluten_free.html  index.html  product_detail.html
wmgzon/tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_product.py
