[project]
name = "wmgzon"
version = "1.0.0"
description = "wmgzon the ecommerce website for bajillions of people"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["wmgzon"]